--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
         "test:e2e": "jest --config ./test/jest-e2e.json",
         "database:dev:start": "docker compose up dev-db -d",
         "database:dev:stop": "docker compose rm dev-db -s -f -v",
-        "database:dev:restart": "bun database:dev:stop && bun database:dev:start && sleep 2 && bun prisma:dev:deploy",
+        "database:dev:restart": "bun database:dev:stop && bun database:dev:start && sleep 1 && bun prisma:dev:deploy",
         "prisma:dev:start": "bun prisma migrate dev && bun prisma generate && bun prisma studio",
         "prisma:dev:deploy": "prisma migrate deploy"
     },
     "dependencies": {
         "@nestjs/common": "^11.0.1",
+        "@nestjs/config": "^4.0.0",
         "@nestjs/core": "^11.0.1",
+        "@nestjs/jwt": "^11.0.0",
+        "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-express": "^11.0.1",
+        "@types/passport-jwt": "^4.0.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1"
     },
